--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 		<canvas id="main"></canvas>
 	</div>
 
-	<script src="./scripts/glUtils.js"></script>
-	<script src="./scripts/main.js"></script>
+	<script src="./out/glUtils.js"></script>
+	<script src="./out/main.js"></script>
 	<!-- <script src=""></script> -->
 </body>
 </html>
