--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<canvas id="main"></canvas>
 	</div>
 
-	<script src="./out/glUtils.js"></script>
+	<script src="./out/utils.js"></script>
 	<script src="./out/main.js"></script>
 	<!-- <script src=""></script> -->
 </body>
