--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
 </style>
 
 <body>
-	<div width="100%" height="100%">
 		<canvas id="main"></canvas>
-	</div>
 
-	<script src="./out/utils.js"></script>
-	<script src="./out/main.js"></script>
+	<script src="./out/utils.js" defer async></script>
+	<script src="./out/main.js" defer></script>
 	<!-- <script src=""></script> -->
 </body>
 </html>
