start from last on edit

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 </style>
 
 <body>
-		<canvas id="main"></canvas>
+	<canvas id="main"></canvas>
 
-	<script src="./out/utils.js" defer async></script>
-	<script src="./out/main.js" defer></script>
+	<script src="./out/utils.js"></script>
+	<script src="./out/main.js"></script>
 	<!-- <script src=""></script> -->
 </body>
+
 </html>
