--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>Conway's</title>
-</head>
+	<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"></head>
 <style>
 	html,
 	body {
@@ -30,9 +30,29 @@
 		width: 100%;
 		height: 100%;
 	}
+
+	/* The sidebar menu */
+.sidenav {
+  padding-top: 20px;
+}
+.sidenav i {
+  padding: 6px 8px 6px 16px;
+  font-size: 50px;
+  /* color:cor; */
+  display: block;
+}
+
 </style>
 
 <body>
+	<div class="sidenav" style="position: absolute;color: aliceblue; margin-top:10px; margin-left: 10px;">
+		<i class="material-icons-round" style="color: red;" title="Clear">clear</i>
+		<i class="material-icons-round" style="color: orangered;" title="Rest">restart_alt</i>
+		<div style="height: 50px;"></div>
+		<i class="material-icons-round" style="color: dodgerblue;" title="Edit">edit</i>
+		<i class="material-icons-round" style="color: greenyellow;" title="Play">play_arrow</i>
+		<i class="material-icons-round" style="color: greenyellow;" title="Pause">pause</i>
+	</div>
 	<canvas id="main"></canvas>
 
 	<script src="./out/utils.js"></script>
