--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 		image-rendering: pixelated;
 		image-rendering: crisp-edges;
 		background-color: black;
-		/* position: absolute; */
 		display: block;
 		top: 0;
 		bottom: 0;
@@ -33,10 +32,24 @@
 		width: 100%;
 		height: 100%;
 	}
+
+	p {
+		margin: 0;
+		position: absolute;
+		color: cornflowerblue;
+		background-color: black;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 20px;
+		padding: 5px;
+	}
 </style>
 
 <body>
-
+	<p>
+		Play/Pause+Edit (toogle) (space)<br>
+		Initialize Random (alt+r)<br>
+		Clear + Pause (alt+c)<br>
+	</p>
 	<canvas id="main"></canvas>
 
 	<script src="./out/utils.js"></script>
